<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/logotext"
            android:contentDescription="@string/img_logo" />

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginBottom="50dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <EditText
            android:inputType="text"
            android:id="@+id/username"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login"
            android:layout_centerHorizontal="true"
            android:autofillHints="@string/hint_username"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:hint="@string/hint_username"
            android:textColorHint="@color/black"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/password"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:autofillHints="@string/password"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_sign_in"
            android:text="@string/sign"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/create"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />






    </RelativeLayout>

</LinearLayout>